fix overlay and first screen z-index

--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ body {
     text-align: center;
 }
 
+
+#screen1 {
+  z-index: 9999;
+
+}
+
 .screen.active {
     display: block;
 }
@@ -452,7 +458,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: black;
-    z-index: 9999;
+    z-index: 9998;
   }
   
 
